--- a/pdfgen-front/src/assets/reset.css
+++ b/pdfgen-front/src/assets/reset.css
@@ -25,6 +25,10 @@ body {
   font: inherit;
 }
 
+.iframe {
+  border: none;
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
@@ -63,6 +67,7 @@ svg {
   max-width: 100%;
   display: block;
 }
+
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 /* @media (prefers-reduced-motion: reduce) {
