Refactored pdf_generator.py, stablished templates, colors, and organized files

--- a/pdfgen-front/src/assets/global.css
+++ b/pdfgen-front/src/assets/global.css
@@ -3,6 +3,10 @@
   --primary-black: #080808;
 }
 
+*:focus {
+  outline-style: none;
+}
+
 input {
   background-color: transparent;
   border-bottom: 1px solid whitesmoke;
